src/lib_duktape.cr


  # Get Operations
  fun get_boolean = duk_get_boolean(ctx : Context, index : Int32) : Int32
  fun get_number = duk_get_number(ctx : Context, index : Int32) : Float64
  fun get_int = duk_get_int(ctx : Context, index : Int32) : Int32
  fun get_uint = duk_get_uint(ctx : Context, index : Int32) : UInt32
  fun get_string = duk_get_string(ctx : Context, index : Int32) : UInt8*
  fun get_lstring = duk_get_lstring(ctx : Context, index : Int32, out_len : Int32*) : UInt8*
  fun get_buffer = duk_get_buffer(ctx : Context, index : Int32, out_size : Int32*) : Void*
  fun get_pointer = duk_get_pointer(ctx : Context, index : Int32) : Void*
  fun get_c_function = duk_get_c_function(ctx : Context, index : Int32) : Void*
  fun get_context = duk_get_context(ctx : Context, index : Int32) : Context
  fun get_heapptr = duk_get_heapptr(ctx : Context, index : Int32) : Void*
  fun get_length = duk_get_length(ctx : Context, index : Int32) : Int32

  # Require Operations
  fun require_undefined = duk_require_undefined(ctx : Context, index : Int32)
  fun require_null = duk_require_null(ctx : Context, index : Int32)
  fun require_boolean = duk_require_boolean(ctx : Context, index : Int32) : Int32
  fun require_number = duk_require_number(ctx : Context, index : Int32) : Float64
  fun require_int = duk_require_int(ctx : Context, index : Int32) : Int32
  fun require_uint = duk_require_uint(ctx : Context, index : Int32) : UInt32
  fun require_string = duk_require_string(ctx : Context, index : Int32) : UInt8*
  fun require_lstring = duk_require_lstring(ctx : Context, index : Int32, out_len : Int32*) : UInt8*
  fun require_buffer = duk_require_buffer(ctx : Context, index : Int32, out_size : Int32*) : Void*
  fun require_pointer = duk_require_pointer(ctx : Context, index : Int32) : Void*
  fun require_c_function = duk_require_c_function(ctx : Context, index : Int32) : Int32
  fun require_context = duk_require_context(ctx : Context, index : Int32) : Context
  fun require_heapptr = duk_require_heapptr(ctx : Context, index : Int32) : Void*
  @[Raises]
  fun require_function = duk_require_function(ctx : Context, index : Int32)

  # Coercion Operations
  fun to_undefined = duk_to_undefined(ctx : Context, index : Int32)
  fun to_null = duk_to_null(ctx : Context, index : Int32)
  fun to_boolean = duk_to_boolean(ctx : Context, index : Int32) : Int32
  fun to_number = duk_to_number(ctx : Context, index : Int32) : Float64
  fun to_int = duk_to_int(ctx : Context, index : Int32) : Int32
  fun to_uint = duk_to_uint(ctx : Context, index : Int32) : UInt32
  fun to_int32 = duk_to_int32(ctx : Context, index : Int32) : Int32
  fun to_uint32 = duk_to_uint32(ctx : Context, index : Int32) : UInt32
  fun to_uint16 = duk_to_uint16(ctx : Context, index : Int32) : UInt16
  fun to_string = duk_to_string(ctx : Context, index : Int32) : UInt8*
  fun to_lstring = duk_to_lstring(ctx : Context, index : Int32, out_len : Int32*) : UInt8*
  fun to_buffer_raw = duk_to_buffer_raw(ctx : Context, index : Int32, out_size : Int32*, flags : UInt32) : Void*
  fun to_pointer = duk_to_pointer(ctx : Context, index : Int32) : Void*
  fun to_object = duk_to_object(ctx : Context, index : Int32)
  fun to_defaultvalue = duk_to_defaultvalue(ctx : Context, index : Int32, hint : Int32)
  fun to_primitive = duk_to_primitive(cts : Context, index : Int32, hint : Int32)
  fun safe_to_lstring = duk_safe_to_lstring(ctx : Context, index : Int32, out_len : Int32*) : UInt8*

  # Misc Conversion
  fun base64_encode = duk_base64_encode(ctx : Context, index : Int32) : UInt8*
  fun base64_decode = duk_base64_decode(ctx : Context, index : Int32)
  fun hex_encode = duk_hex_encode(ctx : Context, index : Int32) : UInt8*
  fun hex_decode = duk_hex_decode(ctx : Context, index : Int32)
  fun json_encode = duk_json_encode(ctx : Context, index : Int32) : UInt8*
  fun json_decode = duk_json_decode(ctx : Context, index : Int32)

  # Buffer Operations
  fun config_buffer = duk_config_buffer(ctx : Context, index : Int32, ptr : Void*, len : Int32)
  fun get_buffer_data = duk_get_buffer_data(ctx : Context, index : Int32, out_size : Int32*) : Void*
  fun push_buffer_object = duk_push_buffer_object(ctx : Context, index : Int32, offset : Int32, byte_length : Int32, flags : UInt32)
  fun resize_buffer = duk_resize_buffer(ctx : Context, index : Int32, new_size : Int32) : Void*
  fun steal_buffer = duk_steal_buffer(ctx : Context, index : Int32, out_size : Int32*) : Void*

  # Property Access
  fun get_prop = duk_get_prop(ctx : Context, obj_index : Int32) : Int32
  fun get_prop_string = duk_get_prop_string(ctx : Context, obj_index : Int32, key : UInt8*) : Int32
  fun get_prop_index = duk_get_prop_index(ctx : Context, obj_index : Int32, arr_index : UInt32) : Int32
  fun put_prop = duk_put_prop(ctx : Context, obj_index : Int32) : Int32
  fun put_prop_string = duk_put_prop_string(ctx : Context, obj_index : Int32, key : UInt8*) : Int32
  fun put_prop_index = duk_put_prop_index(ctx : Context, obj_index : Int32, arr_index : UInt32) : Int32
  fun del_prop = duk_del_prop(ctx : Context, obj_index : Int32) : Int32
  fun del_prop_string = duk_del_prop_string(ctx : Context, obj_index : Int32, key : UInt8*) : Int32
  fun del_prop_index = duk_del_prop_index(ctx : Context, obj_index : Int32, arr_index : UInt32) : Int32
  fun has_prop = duk_has_prop(ctx : Context, obj_index : Int32) : Int32
  fun has_prop_string = duk_has_prop_string(ctx : Context, obj_index : Int32, key : UInt8*) : Int32
  fun has_prop_index = duk_has_prop_index(ctx : Context, obj_Index : Int32, arr_index : UInt32) : Int32
  fun def_prop = duk_def_prop(ctx : Context, obj_index : Int32, flags : UInt32)
  fun get_global_string = duk_get_global_string(ctx : Context, key : UInt8*) : Int32
  fun put_global_string = duk_put_global_string(ctx : Context, key : UInt8*) : Int32

  # Object Prototype
  fun get_prototype = duk_get_prototype(ctx : Context, index : Int32)
  fun set_prototype = duk_set_prototype(ctx : Context, index : Int32)

  # Object Finalizer
  fun get_finalizer = duk_get_finalizer(ctx : Context, index : Int32)
  fun set_finalizer = duk_set_finalizer(ctx : Context, index : Int32)

  # Global Object
  fun set_global_object = duk_set_global_object(ctx : Context)

  # Duktape/C function magic value
  fun get_magic = duk_get_magic(ctx : Context, index : Int32) : Int32
  fun set_magic = duk_set_magic(ctx : Context, index : Int32)
  fun get_current_magic = duk_get_current_magic(ctx : Context) : Int32

  # Module Helpers
  fun put_function_list = duk_put_function_lest(ctx : Context, obj_index : Int32, funcs : FuncListEntry*)
  fun put_number_list = duk_put_number_list(ctx : Context, obj_index : Int32, numbers : NumberListEntry*)

  # Variable Access
  fun get_var = duk_get_var(ctx : Context)
  fun put_var = duk_put_var(ctx : Context)
  fun del_var = duk_del_var(ctx : Context) : Int32
  fun has_var = duk_has_var(ctx : Context) : Int32

  # Object Operations
  fun compact = duk_compact(ctx : Context, obj_index : Int32)
  fun enum = duk_enum(ctx : Context, obj_index : Int32, flags : UInt32)
  fun next = duk_next(ctx : Context, index : Int32, value : Int32) : Int32

  # String Manipulation
  fun concat = duk_concat(ctx : Context, count : Int32)
  fun join = duk_join(ctx : Context, count : Int32)
  fun decode_string = duk_decode_string(ctx : Context, index : Int32, callback : Void*, udata : Void*)
  fun map_string = duk_map_string(ctx : Context, index : Int32, callback : Void*, udata : Void*)
  fun substring = duk_substring(ctx : Context, index : Int32, start_idx : Int32, end_idx : Int32)
  fun trim = duk_trim(ctx : Context, index : Int32)
  fun char_code_at = duk_char_code_at(ctx : Context, index : Int32, offset : Int32) : Int32

  # ECMAScript Operators
  fun equals = duk_equals(ctx : Context, one : Int32, two : Int32) : Int32
  fun instanceof = duk_instanceof(ctx : Context, one : Int32, two : Int32) : Int32
  fun strict_equals = duk_strict_equals(ctx : Context, one : Int32, two : Int32) : Int32

  # Method Calls
  fun call = duk_call(ctx : Context, nargs : Int32)
  fun call_method = duk_call_method(ctx : Context, nargs : Int32)
  fun call_prop = duk_call_prop(ctx : Context, index : Int32, nargs : Int32)
  fun pcall = duk_pcall(ctx : Context, nargs : Int32) : Int32
  fun pcall_method = duk_pcall_method(ctx : Context, nargs : Int32) : Int32
  fun pcall_prop = duk_pcall_prop(ctx : Context, obj_index : Int32, nargs : Int32) : Int32
  fun new = duk_new(ctx : Context, nargs : Int32)
  fun pnew = duk_pnew(ctx : Context, nargs : Int32) : Int32
  fun safe_call = duk_safe_call(ctx : Context, func : Context -> Int32, nargs : Int32, nrets : Int32) : Int32

  # Compilation and Evaluation
  fun eval_raw = duk_eval_raw(ctx : Context, src_buffer : UInt8*, src_length : Int32, flags : UInt32) : Int32
  fun compile_raw = duk_compile_raw(ctx : Context, src_buffer : UInt8*, src_length : Int32, flags : UInt32) : Int32
  fun dump_function = duk_dump_function(ctx : Context)
  fun load_function = duk_load_function(ctx : Context)

  # Logging
  fun log = duk_log(ctx : Context, level : Int32, fmt : UInt8*, ...)
  fun log_va = duk_log_va(ctx : Context, level : Int32, fmt : UInt8*, ap : Void*)

  # Debugging
  fun push_context_dump = duk_push_context_dump(ctx : Context)

  # Debug Protocol
  fun debugger_attach = duk_debugger_attach(ctx : Context, read : Void*, write : Void*, peek : Void*, read_flush : Void*, write_flush : Void*, detached : Void*, udata : Void*)
  fun debugger_detach = duk_debug_detach(ctx : Context)
  fun debugger_cooperate = duk_debugger_cooperate(ctx : Context)
end
